--- a/src/scss/theme/_netmatters.scss
+++ b/src/scss/theme/_netmatters.scss
@@ -30,6 +30,8 @@ $primary-button-hover-colour: #2a6ec6;
 $secondary-button-colour: #999aa2;
 $secondary-button-hover-colour: #7e808a;
 
+$link-colour: #926fb1;
+
 // Only used for the search text field input in header (for some breakpoints).
 // A nice design change would be to unify how focus is visually indicated,
 // for example having any focused element glow with this colour.
