improve floating header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,8 +15,8 @@
         <a class="support" href="https://support.netmatters.com/">Support</a>
         <a class="contact" href="contact.php">Contact</a>
         <form>
-            <input id="search" name="query" type="search" placeholder="Search..." aria-label="Search query">
-            <button type="submit" id="search-submit" aria-label="Perform search"></button>
+            <input name="query" type="search" placeholder="Search..." aria-label="Search query">
+            <button type="submit" aria-label="Perform search"></button>
         </form>
     </div>
 </header>
