remove links to live site

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -8,6 +8,6 @@
 
         <p>We provide cost effective, reliable solutions to a range of services; from bespoke cloud-based management systems, workflow and IT solutions through to creative website development and integrated digital campaigning.</p>
 
-        <a class="call-to-action" href="https://www.netmatters.co.uk/our-culture">Our Culture</a>
+        <a class="call-to-action" href="#">Our Culture</a>
     </div>
 </section>
