--- a/src/partials/clients.html
+++ b/src/partials/clients.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="badge">
-            <a href="https://www.netmatters.co.uk/new-website-developed-for-crane-garden-buildings">
+            <a href="new-website-developed-for-crane-garden-buildings">
                 <img class="colour" src="img/partner-brands/crane-colour.png" alt="Crane Garden Buildings logo">
                 <img class="bw" src="img/partner-brands/crane-bw.png" alt="Crane Garden Buildings logo">
             </a>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="badge">
-            <a href="https://www.netmatters.co.uk/new-northern-diver-website-is-live">
+            <a href="page/new-northern-diver-website-is-live">
                 <img class="colour" src="img/partner-brands/northern-diver-colour.png" alt="Northern Diver logo">
                 <img class="bw" src="img/partner-brands/northern-diver-bw.png" alt="Northern Diver logo">
             </a>
