--- a/src/partials/contactForm.html
+++ b/src/partials/contactForm.html
@@ -21,7 +21,7 @@
             <label>
                 <input type="checkbox" name="user-opt-in">
                 <!-- <span class="checkmark"></span> -->
-                <p>Tick this box if you would like to also receive marketing information from us.<br>Please see our <a href="https://www.netmatters.co.uk/privacy-policy">Privacy Policy</a> for details on how your data is used.</p>
+                <p>Tick this box if you would like to also receive marketing information from us.<br>Please see our <a href="page/privacy-policy">Privacy Policy</a> for details on how your data is used.</p>
             </label>
         </div>
     </fieldset>
