--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -31,28 +31,28 @@
         <section class="footer-about">
             <h2>About Netmatters</h2>
             <ul>
-                <li><a href="https://www.netmatters.co.uk/news">
+                <li><a href="page/news">
                     News
                 </a></li>
-                <li><a href="https://www.netmatters.co.uk/our-careers">
+                <li><a href="page/our-careers">
                     Our Careers
                 </a></li>
-                <li><a href="https://www.netmatters.co.uk/team">
+                <li><a href="page/team">
                     Our Team
                 </a></li>
-                <li><a href="https://www.netmatters.co.uk/office-tour">
+                <li><a href="page/office-tour">
                     Our Office Tour
                 </a></li>
-                <li><a href="https://www.netmatters.co.uk/privacy-policy">
+                <li><a href="page/privacy-policy">
                     Privacy Policy
                 </a></li>
-                <li><a href="https://www.netmatters.co.uk/cookie-policy">
+                <li><a href="page/cookie-policy">
                     Cookie Policy
                 </a></li>
-                <li><a href="https://www.netmatters.co.uk/terms-and-conditions">
+                <li><a href="page/terms-and-conditions">
                     Terms & Conditions
                 </a></li>
-                <li><a href="https://www.netmatters.co.uk/terms-and-conditions/uk-domains">
+                <li><a href="page/terms-and-conditions/uk-domains">
                     UK Domains
                 </a></li>
             </ul>
@@ -61,7 +61,7 @@
         <section class="footer-website">
             <h2>Website</h2>
             <ul>
-                <li><a href="https://www.netmatters.co.uk/sitemap.xml">
+                <li><a href="page/sitemap.xml">
                     Sitemap
                 </a></li>
                 <li>&copy; Copyright Netmatters Ltd. 2020</li>
