--- a/src/partials/heroCarousel.html
+++ b/src/partials/heroCarousel.html
@@ -8,7 +8,7 @@
                     <div class="wrapper">
                         <h2>Web Design</h2>
                         <p>For businesses looking to make a strong<br>and effective first impression.</p>
-                        <a class="call-to-action" href="https://www.netmatters.co.uk/web-design">Find out more</a>
+                        <a class="call-to-action" href="page/web-design">Find out more</a>
                     </div>
                     </div>
                 </li>
@@ -17,7 +17,7 @@
                     <div class="wrapper">
                         <h2>IT Support</h2>
                         <p>Fast and cost-effective IT support<br>services for your business.</p>
-                        <a class="call-to-action" href="https://www.netmatters.co.uk/it-support">Find out more</a>
+                        <a class="call-to-action" href="page/it-support">Find out more</a>
                     </div>
                     </div>
                 </li>
@@ -26,7 +26,7 @@
                     <div class="wrapper">
                         <h2>Telecoms Services</h2>
                         <p>A new approach to connectivity, see how<br>we can help your business.</p>
-                        <a class="call-to-action" href="https://www.netmatters.co.uk/telecoms-services">Find out more</a>
+                        <a class="call-to-action" href="page/telecoms-services">Find out more</a>
                     </div>
                     </div>
                 </li>
@@ -35,7 +35,7 @@
                     <div class="wrapper">
                         <h2>Bespoke Software</h2>
                         <p>Bring your business together<br>with solutions that grow with you.</p>
-                        <a class="call-to-action" href="https://www.netmatters.co.uk/bespoke-software">Find out more</a>
+                        <a class="call-to-action" href="page/bespoke-software">Find out more</a>
                     </div>
                     </div>
                 </li>
@@ -44,7 +44,7 @@
                     <div class="wrapper">
                         <h2>Digital Marketing</h2>
                         <p>Generating you new business through<br>results-driven marketing activities.</p>
-                        <a class="call-to-action" href="https://www.netmatters.co.uk/digital-marketing">See how we can help you</a>
+                        <a class="call-to-action" href="page/digital-marketing">See how we can help you</a>
                     </div>
                     </div>
                 </li>
@@ -53,7 +53,7 @@
                     <div class="wrapper">
                         <h2>Cyber Security</h2>
                         <p>Keeping businesses and their customers&rsquo;<br>sensitive information protected.</p>
-                        <a class="call-to-action" href="https://www.netmatters.co.uk/cyber-security">Find out more</a>
+                        <a class="call-to-action" href="page/cyber-security">Find out more</a>
                     </div>
                     </div>
                 </li>
@@ -76,7 +76,7 @@
         <div class="wrapper">
             <h2>Web Design</h2>
             <p>For businesses looking to make a strong<br>and effective first impression.</p>
-            <a class="call-to-action" href="https://www.netmatters.co.uk/web-design">Find out more</a>
+            <a class="call-to-action" href="page/web-design">Find out more</a>
         </div>
     </div>
     </noscript>
