--- a/src/partials/navigationBar.html
+++ b/src/partials/navigationBar.html
@@ -2,27 +2,27 @@
 <nav>
     <div class="wrapper">
         <div class="category web-design">
-            <a class="category-head" href="https://www.netmatters.co.uk/web-design">
+            <a class="category-head" href="page/web-design">
                 <h2><span class="first">Web</span> Design</h2>
             </a>
             <div class="sub-wrapper">
                 <div class="subcategories">
-                    <a href="https://www.netmatters.co.uk/web-design/website-design">
+                    <a href="page/web-design/website-design">
                         Stylish Websites
                     </a>
-                    <a href="https://www.netmatters.co.uk/web-design/ecommerce-development">
+                    <a href="page/web-design/ecommerce-development">
                         eCommerce Stores
                     </a>
-                    <a href="https://www.netmatters.co.uk/web-design/branding">
+                    <a href="page/web-design/branding">
                         Branding
                     </a>
-                    <a href="https://www.netmatters.co.uk/web-design/mobile-apps-development">
+                    <a href="page/web-design/mobile-apps-development">
                         Apps
                     </a>
-                    <a href="https://www.netmatters.co.uk/web-design/web-hosting">
+                    <a href="page/web-design/web-hosting">
                         Web Hosting
                     </a>
-                    <a href="https://www.netmatters.co.uk/web-design/pay-monthly-websites">
+                    <a href="page/web-design/pay-monthly-websites">
                         Pay Monthly Websites
                     </a>
                 </div>
@@ -30,27 +30,27 @@
         </div>
 
         <div class="category it-support">
-            <a class="category-head" href="https://www.netmatters.co.uk/it-support">
+            <a class="category-head" href="page/it-support">
                 <h2><span class="first">IT</span> Support</h2>
             </a>
             <div class="sub-wrapper">
                 <div class="subcategories">
-                    <a href="https://www.netmatters.co.uk/it-support/managed-it-support">
+                    <a href="page/it-support/managed-it-support">
                         Managed IT
                     </a>
-                    <a href="https://www.netmatters.co.uk/it-support/business-it-support">
+                    <a href="page/it-support/business-it-support">
                         Business IT
                     </a>
-                    <a href="https://www.netmatters.co.uk/it-support/office-365-for-business">
+                    <a href="page/it-support/office-365-for-business">
                         Office 365
                     </a>
-                    <a href="https://www.netmatters.co.uk/it-support/it-consultancy">
+                    <a href="page/it-support/it-consultancy">
                         Consultancy
                     </a>
-                    <a href="https://www.netmatters.co.uk/it-support/cloud-service-provider">
+                    <a href="page/it-support/cloud-service-provider">
                         Cloud Provider
                     </a>
-                    <a href="https://www.netmatters.co.uk/it-support/data-backup-disaster-recovery">
+                    <a href="page/it-support/data-backup-disaster-recovery">
                         Data Backup
                     </a>
                 </div>
@@ -58,27 +58,27 @@
         </div>
 
         <div class="category telecoms-services">
-            <a class="category-head" href="https://www.netmatters.co.uk/telecoms-services">
+            <a class="category-head" href="page/telecoms-services">
                 <h2><span class="first">Telecoms</span> Services</h2>
             </a>
             <div class="sub-wrapper">
                 <div class="subcategories">
-                    <a href="https://www.netmatters.co.uk/telecoms-services/gigabit-voucher-scheme" >
+                    <a href="page/telecoms-services/gigabit-voucher-scheme" >
                         Gigabit Voucher
                     </a>
-                    <a href="https://www.netmatters.co.uk/telecoms-services/hosted-business-voip" >
+                    <a href="page/telecoms-services/hosted-business-voip" >
                         Hosted VoIP
                     </a>
-                    <a href="https://www.netmatters.co.uk/telecoms-services/business-voip" >
+                    <a href="page/telecoms-services/business-voip" >
                         Business VoIP
                     </a>
-                    <a href="https://www.netmatters.co.uk/telecoms-services/business-broadband-provider" >
+                    <a href="page/telecoms-services/business-broadband-provider" >
                         Business Broadband
                     </a>
-                    <a href="https://www.netmatters.co.uk/telecoms-services/leased-lines-provider" >
+                    <a href="page/telecoms-services/leased-lines-provider" >
                         Leased Line
                     </a>
-                    <a href="https://www.netmatters.co.uk/telecoms-services/3cx-system" >
+                    <a href="page/telecoms-services/3cx-system" >
                         3CX Systems
                     </a>
                 </div>
@@ -86,27 +86,27 @@
         </div>
 
         <div class="category bespoke-software">
-            <a class="category-head" href="https://www.netmatters.co.uk/bespoke-software">
+            <a class="category-head" href="page/bespoke-software">
                 <h2><span class="first">Bespoke</span> Software</h2>
             </a>
             <div class="sub-wrapper">
                 <div class="subcategories">
-                    <a href="https://www.netmatters.co.uk/bespoke-software/workflow-solutions" >
+                    <a href="page/bespoke-software/workflow-solutions" >
                         Workflow Solutions
                     </a>
-                    <a href="https://www.netmatters.co.uk/bespoke-software/business-automation" >
+                    <a href="page/bespoke-software/business-automation" >
                         Automation
                     </a>
-                    <a href="https://www.netmatters.co.uk/bespoke-software/systems-integrations" >
+                    <a href="page/bespoke-software/systems-integrations" >
                         System Integration
                     </a>
-                    <a href="https://www.netmatters.co.uk/bespoke-software/database-management-software" >
+                    <a href="page/bespoke-software/database-management-software" >
                         Database Management
                     </a>
-                    <a href="https://www.netmatters.co.uk/bespoke-software/sharepoint-development" >
+                    <a href="page/bespoke-software/sharepoint-development" >
                         SharePoint
                     </a>
-                    <a href="https://www.netmatters.co.uk/bespoke-software/erp-software" >
+                    <a href="page/bespoke-software/erp-software" >
                         ERP 
                     </a>
                 </div>
@@ -114,27 +114,27 @@
         </div>
         
         <div class="category digital-marketing">
-            <a class="category-head" href="https://www.netmatters.co.uk/digital-marketing">
+            <a class="category-head" href="page/digital-marketing">
                 <h2><span class="first">Digital</span> Marketing</h2>
             </a>
             <div class="sub-wrapper">
                 <div class="subcategories">
-                    <a href="https://www.netmatters.co.uk/digital-marketing/seo-search-engine-optimisation" >
+                    <a href="page/digital-marketing/seo-search-engine-optimisation" >
                         Search (SEO)
                     </a>
-                    <a href="https://www.netmatters.co.uk/digital-marketing/ppc" >
+                    <a href="page/digital-marketing/ppc" >
                         Paid (PPC)
                     </a>
-                    <a href="https://www.netmatters.co.uk/digital-marketing/conversion-marketing" >
+                    <a href="page/digital-marketing/conversion-marketing" >
                         Conversion (CRO)
                     </a>
-                    <a href="https://www.netmatters.co.uk/digital-marketing/email-marketing" >
+                    <a href="page/digital-marketing/email-marketing" >
                         Email
                     </a>
-                    <a href="https://www.netmatters.co.uk/digital-marketing/social-media-marketing" >
+                    <a href="page/digital-marketing/social-media-marketing" >
                         Social Media
                     </a>
-                    <a href="https://www.netmatters.co.uk/digital-marketing/content-marketing" >
+                    <a href="page/digital-marketing/content-marketing" >
                         Content
                     </a>
                 </div>
@@ -142,27 +142,27 @@
         </div>
         
         <div class="category cyber-security">
-            <a class="category-head" href="https://www.netmatters.co.uk/cyber-security">
+            <a class="category-head" href="page/cyber-security">
                 <h2><span class="first">Cyber</span> Security</h2>
             </a>
             <div class="sub-wrapper">
                 <div class="subcategories">
-                    <a href="https://www.netmatters.co.uk/cyber-security/cyber-security-assessment" >
+                    <a href="page/cyber-security/cyber-security-assessment" >
                         Assessment
                     </a>
-                    <a href="https://www.netmatters.co.uk/cyber-security/cyber-security-management" >
+                    <a href="page/cyber-security/cyber-security-management" >
                         Management
                     </a>
-                    <a href="https://www.netmatters.co.uk/cyber-security/cyber-penetration-testing" >
+                    <a href="page/cyber-security/cyber-penetration-testing" >
                         Penetration Testing
                     </a>
-                    <a href="https://www.netmatters.co.uk/cyber-security/cyber-essentials-certification" >
+                    <a href="page/cyber-security/cyber-essentials-certification" >
                         Cyber Essentials
                     </a>
-                    <a href="https://www.netmatters.co.uk/cyber-security/pci-compliance" >
+                    <a href="page/cyber-security/pci-compliance" >
                         PCI/DSS
                     </a>
-                    <a href="https://www.netmatters.co.uk/cyber-security/hacker-prevention" >
+                    <a href="page/cyber-security/hacker-prevention" >
                         Hacker Prevention
                     </a>
                 </div>
