--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -4,7 +4,7 @@
         <h2>Netmatters</h2>
         <p>Netmatters Ltd is a leading web design, IT support and digital marketing agency based in Wymondham, Norfolk.</p>
 
-        <p></p>
+        <p>Words</p>
 
         <p></p>
 
